# esp-gizmo

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  Makefile-user.mk  README.md
app/: CMakeLists.txt  application.cpp  main.c  user_config.h
cmake/: toolchain.cmake
cmake/Platform/: esp8266.cmake
hardware/esp-gizmo/: esp-gizmo.kicad_pcb  esp-gizmo.net  esp-gizmo.pro  esp-gizmo.sch
hardware/my_libs/: other_components.dcm  other_components.lib
hardware/my_libs/my_footprints.pretty/: AC_DC.kicad_mod  DIP-6_SMD.kicad_mod  ESP-12E.kicad_mod
mqtt/: CMakeLists.txt
mqtt/include/: mqtt.h  user_config.h
src/: app.c  ota_basic.c
variant/sensor/: main.c
variant/switch/: key_task.c  key_task.h  load_driver.c  load_driver.h  main.c  mqtt_task.c  mqtt_task.h
